# starlink-satellite-number

./: .gitignore  README.md  build_starlink_stats.py  build_stats.py  default.nix  get_data.sh  kuiper_satcat.json  main.py  o3b_satcat.json  oneweb_satcat.json  pyproject.toml  satellite-development.csv  starlink_satcat.json
.github/workflows/: build-starlink-stats.yml
nixpkgs/: default.nix
